# dft-fortran

./: .gitignore
dft-cpp/: CMakeLists.txt
dft-cpp/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dft  hw4  hw4.f90  main.cpp
dft-cpp/src/armadillo-7.400.2/: ArmadilloConfig.cmake  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  libarmadillo.7.dylib  libarmadillo.dylib
dft-cpp/src/armadillo-7.400.2/tmp/include/armadillo_bits/: config.hpp
dft-cpp/src/dft.dSYM/Contents/Resources/DWARF/: dft
dft-cpp/src/include/: dft.h  functions.h  numerov.h  ode.h  verlet.h
dft-cpp/src/quad/: quad.h  quad_simpson.h
dft-solids-f90/: apw.f90  dft  legendre.mod  legendre_polynomial.f90  makefile
dft-solids-f90/apw-f90/: AA.txt  B.txt  C.txt  a.out  apw  apw.f90  copper_chodorow.txt  data.txt  det.f90  dft  dft_data.f90  dft_data.mod  dgetrf_test.f90  legendre.f90  legendre_pols.f90  legendre_pols.mod  linalg.f90  linalg.mod  linpot.txt  main.f90  makefile  potential  potential.f90  potential.mod  potential.xlsx  potentialinterp.py  utils.f90  utils.mod
dft-solids-f90/apw-f90/apw.dSYM/Contents/: Info.plist
dft-solids-f90/apw-f90/apw.dSYM/Contents/Resources/DWARF/: apw
dft-solids-f90/dft.dSYM/Contents/Resources/DWARF/: dft
papers/: hw1.docx
